metadata/gateway/envoy.yaml
static_resources:
  listeners:
    - name: listener_http
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 5016
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                generate_request_id: true
                tracing:
                  provider:
                    name: envoy.tracers.opentelemetry
                    typed_config:
                      "@type": type.googleapis.com/envoy.config.trace.v3.OpenTelemetryConfig
                      grpc_service:
                        envoy_grpc:
                          cluster_name: otel_collector_grpc
                        timeout: 0.25s
                      service_name: envid-gateway
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: envid
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/health"
                          route:
                            cluster: backend
                            timeout: 0s
                          typed_per_filter_config:
                            envoy.filters.http.jwt_authn:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.PerRouteConfig
                              disabled: true
                        - match:
                            prefix: "/"
                          route:
                            cluster: backend
                            timeout: 0s
                http_filters:
                  - name: envoy.filters.http.jwt_authn
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
                      providers:
                        keycloak:
                          issuer: "http://keycloak:8080/realms/envid"
                          audiences:
                            - "envid-api"
                          remote_jwks:
                            http_uri:
                              uri: "http://keycloak:8080/realms/envid/protocol/openid-connect/certs"
                              cluster: keycloak
                              timeout: 5s
                            cache_duration: 600s
                      rules:
                        - match:
                            prefix: "/"
                          requires:
                            provider_name: keycloak
                  - name: envoy.filters.http.local_ratelimit
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                      stat_prefix: http_local_rate_limiter
                      token_bucket:
                        max_tokens: 60
                        tokens_per_fill: 30
                        fill_interval: 1s
                      filter_enabled:
                        runtime_key: local_rate_limit_enabled
                        default_value:
                          numerator: 100
                          denominator: HUNDRED
                      filter_enforced:
                        runtime_key: local_rate_limit_enforced
                        default_value:
                          numerator: 100
                          denominator: HUNDRED
                      response_headers_to_add:
                        - append: false
                          header:
                            key: "x-rate-limit"
                            value: "true"
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                access_log:
                  - name: envoy.access_loggers.stdout
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog

  clusters:
    - name: backend
      type: STRICT_DNS
      connect_timeout: 2s
      load_assignment:
        cluster_name: backend
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: backend
                      port_value: 5016

    - name: keycloak
      type: STRICT_DNS
      connect_timeout: 2s
      load_assignment:
        cluster_name: keycloak
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: keycloak
                      port_value: 8080

    - name: otel_collector_grpc
      type: STRICT_DNS
      connect_timeout: 2s
      http2_protocol_options: {}
      load_assignment:
        cluster_name: otel_collector_grpc
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: otel-collector
                      port_value: 4317
